pod-security/restricted/disallow-capabilities-strict/e2e/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../disallow-capabilities-strict.yaml
assert:
- policy-assert.yaml
