pod-security/restricted/disallow-capabilities-strict/e2e/bad-cronjob-adding-capabilities.yaml
###### CronJobs - Bad
apiVersion: batch/v1
kind: CronJob
metadata:
  name: addcap-badcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - CHOWN
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: addcap-badcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - CHOWN
                - NET_BIND_SERVICE
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: addcap-badcronjob03
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
          - name: container02
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - CHOWN
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: addcap-badcronjob04
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - NET_BIND_SERVICE
          - name: container02
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - CHOWN
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: addcap-badcronjob05
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - NET_BIND_SERVICE
          - name: container02
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - CHOWN
                - NET_BIND_SERVICE
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: addcap-badcronjob06
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - CHOWN
          containers:
          - name: container01
            image: busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: addcap-badcronjob07
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - CHOWN
                - NET_BIND_SERVICE
          containers:
          - name: container01
            image: busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: addcap-badcronjob08
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
          - name: initcontainer02
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - CHOWN
          containers:
          - name: container01
            image: busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: addcap-badcronjob09
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - NET_BIND_SERVICE
          - name: initcontainer02
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - CHOWN
          containers:
          - name: container01
            image: busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: addcap-badcronjob10
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - NET_BIND_SERVICE
          - name: initcontainer02
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - CHOWN
                - NET_BIND_SERVICE
          containers:
          - name: container01
            image: busybox:1.35
