pod-security/restricted/disallow-capabilities-strict/e2e/bad-deployment-adding-capabilities.yaml
###### Deployments - Bad
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addcap-baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - CHOWN
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addcap-baddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - CHOWN
            - NET_BIND_SERVICE
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addcap-baddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
      - name: container02
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - CHOWN
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addcap-baddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - NET_BIND_SERVICE
      - name: container02
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - CHOWN
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addcap-baddeployment05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - NET_BIND_SERVICE
      - name: container02
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - CHOWN
            - NET_BIND_SERVICE
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addcap-baddeployment06
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - CHOWN
      containers:
      - name: container01
        image: busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addcap-baddeployment07
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - CHOWN
            - NET_BIND_SERVICE
      containers:
      - name: container01
        image: busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addcap-baddeployment08
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: busybox:1.35
      - name: initcontainer02
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - CHOWN
      containers:
      - name: container01
        image: busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addcap-baddeployment09
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - NET_BIND_SERVICE
      - name: initcontainer02
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - CHOWN
      containers:
      - name: container01
        image: busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: addcap-baddeployment10
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - NET_BIND_SERVICE
      - name: initcontainer02
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - CHOWN
            - NET_BIND_SERVICE
      containers:
      - name: container01
        image: busybox:1.35
