pod-security/restricted/disallow-capabilities-strict/e2e/bad-pod-drop-all.yaml
###### Pods - Bad
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      capabilities:
        drop:
        - NET_RAW
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
  - name: container01
    image: busybox:1.35
  - name: container02
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  containers:
  - name: container01
    image: busybox:1.35
  - name: container02
    image: busybox:1.35
    securityContext:
      capabilities:
        drop:
        - NET_RAW
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      capabilities:
        drop:
        - NET_RAW
  - name: container02
    image: busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod06
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod07
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
    securityContext:
      capabilities:
        drop:
        - NET_RAW
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod08
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
  - name: initcontainer02
    image: busybox:1.35
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod09
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
  - name: initcontainer02
    image: busybox:1.35
    securityContext:
      capabilities:
        drop:
        - NET_RAW
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod10
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
    securityContext:
      capabilities:
        drop:
        - NET_RAW
  - name: initcontainer02
    image: busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      capabilities:
        drop:
        - ALL
