pod-security/restricted/disallow-capabilities-strict/e2e/good-cronjob-drop-all.yaml
###### CronJobs - Good
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              capabilities:
                drop:
                - ALL
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              capabilities:
                drop:
                - NET_RAW
                - ALL
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob03
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              capabilities:
                drop:
                - ALL
          - name: container02
            image: busybox:1.35
            securityContext:
              capabilities:
                drop:
                - ALL
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob04
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
            securityContext:
              capabilities:
                drop:
                - ALL
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              capabilities:
                drop:
                - ALL
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob05
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
            securityContext:
              capabilities:
                drop:
                - NET_RAW
                - ALL
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              capabilities:
                drop:
                - ALL
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob06
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
            securityContext:
              capabilities:
                drop:
                - ALL
          - name: initcontainer02
            image: busybox:1.35
            securityContext:
              capabilities:
                drop:
                - ALL
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              capabilities:
                drop:
                - ALL
