pod-security/restricted/disallow-capabilities-strict/e2e/good-pod-drop-all.yaml
###### Pods - Good
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      capabilities:
        add:
        - SETGID
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      capabilities:
        add:
        - DAC_OVERRIDE
  - name: container02
    image: busybox:1.35
    securityContext:
      capabilities:
        add:
        - SETGID
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
    securityContext:
      capabilities:
        add:
        - DAC_OVERRIDE
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
    securityContext:
      capabilities:
        add:
        - DAC_OVERRIDE
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      capabilities:
        add:
        - SETGID
