pod-security/restricted/disallow-capabilities-strict/e2e/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-capabilities-strict
spec:
  validationFailureAction: audit
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
