pod-security/restricted/disallow-capabilities-strict/e2e/remediation-policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: remediate-capabilities-strict
spec:
  validationFailureAction: Audit
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
